<resources>

    <string name="app_name">Tarea Unidad 2</string>

    <!-- Button names -->
    <string name="button_play">Jugar</string>
    <string name="button_config">Configurar</string>
    <string name="button_about">Acerca de</string>
    <string name="button_exit">Salir</string>

    <!-- Tabs Names -->
    <string name="asteroid_tab">Asteroides</string>
    <string name="custombutton_tab">Botón Personalizado</string>
    <string name="calculator_tab">Calculadora</string>
    <string name="courtcounter_tab">Contador Baloncesto</string>


    <!-- Asteroid tab Strings -->
    <string name="asteroid_title">Asteroides</string>

    <!-- Custom button tab Strings -->
    <string name="hint_write_number">Instroduce un número</string>
    <string name="hint_result">Resultado</string>
    <string name="_0" translatable="false">0</string>

    <!-- Court Counter -->
    <string name="team_A">Equipo A</string>
    <string name="team_B">Equipo B</string>
    <string name="_3_points">+3 Puntos</string>
    <string name="_2_points">+2 Puntos</string>
    <string name="free_throw">Tiro Libre</string>
    <string name="reset_button">Resetear</string>

    <!-- Calculator -->
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="plus" translatable="false">+</string>
    <string name="equal" translatable="false">=</string>
    <string name="c" translatable="false">c</string>
    <string name="ptas" translatable="false">Ptas</string>
    <string name="divide_symbol" translatable="false">÷</string>
    <string name="multiply_symbol" translatable="false">x</string>
    <string name="subtraction_symbol" translatable="false">-</string>
    <string name="operation_pending">Ya ha pulsado una operación</string>
</resources>
