<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result_text_view"
        style="@style/Calculator_Result"
        android:text="@string/_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout style="@style/Row_Calculator">

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_1" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_2" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_3" />
            </LinearLayout>

            <LinearLayout style="@style/Row_Calculator">

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_4" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_5" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_6" />
            </LinearLayout>

            <LinearLayout style="@style/Row_Calculator">

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_7" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_8" />

                <Button
                    style="@style/Calculator_Button"
                    android:text="@string/_9" />
            </LinearLayout>

            <LinearLayout style="@style/Row_Calculator">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_0" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ptas" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/plus" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/equal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/c"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>