<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_asteroids"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_buttons"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/game_title_text_view"
        style="@style/TitleTextView_Asteroids"
        android:text="@string/asteroid_title"
        tools:text="@string/asteroid_title" />

    <Button
        android:id="@+id/button_play"
        style="@style/ButtonStyle_Asteroids.Alternative"
        android:text="@string/button_play"
        tools:text="@string/button_play" />

    <Button
        android:id="@+id/button_config"
        style="@style/ButtonStyle_Asteroids.Alternative"
        android:text="@string/button_config"
        tools:text="@string/button_config" />

    <Button
        android:id="@+id/button_about"
        style="@style/ButtonStyle_Asteroids.Alternative"
        android:text="@string/button_about"
        tools:text="@string/button_about" />

    <Button
        android:id="@+id/button_exit"
        style="@style/ButtonStyle_Asteroids.Alternative"
        android:text="@string/button_exit"
        tools:text="@string/button_exit" />

</LinearLayout>

