<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:context="com.example.martinfalconja.martinfalconja_u2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CourtCounter_TexView"
                android:text="@string/team_A" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/CourtCounter_TexView.Points"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button_three_points_player_a"
                style="@style/ButtonThrow"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/button_two_points_player_a"
                style="@style/ButtonThrow"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/button_one_points_player_a"
                style="@style/ButtonThrow"
                android:text="@string/free_throw"
                android:textAllCaps="true" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CourtCounter_TexView"
                android:text="@string/team_B" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/CourtCounter_TexView.Points"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button_three_points_player_b"
                style="@style/ButtonThrow"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/button_two_points_player_b"
                style="@style/ButtonThrow"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/button_one_points_player_b"
                style="@style/ButtonThrow"
                android:text="@string/free_throw"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_points_button"
        style="@style/ResetPointsButton"
        android:text="@string/reset_button" />
</RelativeLayout>
